--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+audio++ (0.3) unstable; urgency=medium
+
+  * Clean up span and vector interfaces
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Fri, 06 Jun 2025 22:42:31 -0400
+
 audio++ (0.2) unstable; urgency=medium
 
   * Update CMake files
